--- a/src/deptool.in
+++ b/src/deptool.in
@@ -2397,10 +2397,10 @@ sub codeReview {
         my %info = simpleParse(\@output, 
                                [ qr/^-+$/o => undef,
                                  qr/^Revision: (\S+)$/o => 'revision',
-                                 qr/^Ancestor: (\S+)$/o => 'ancestor',
+                                 qr/^(?:(?:Ancestor)|(?:Parent)):\s+(\S+)$/o => 'ancestor',
                                  qr/^Author:/o => undef,
-                                 qr/^Date: (\S+)$/o => 'date',
-				 qr/^Branch: (\S+)$/o => 'branch' ]);
+                                 qr/^Date:\s+(.+)$/o => 'date',
+				 qr/^Branch:\s+(\S+)$/o => 'branch' ]);
 
         $parents{$info{revision}} = $info{ancestor};
         $dates{$info{revision}} = $info{date};
@@ -2518,7 +2518,7 @@ sub kdiffDirs {
     # message for the file we are reviewing.
 
     foreach my $rev (@$revisions) {
-        print vcLogRevision($rev); 
+        print vcLogRevision($rev);
     }
     my $cur = '*start*';
     my $auto = undef;
@@ -3779,10 +3779,15 @@ sub vcLogRevision {
 
     $_ = vcVersion();
     my $vcver = "$_->{type}-$_->{version}";
-    if ($vcver =~ /^monotone-0.28\b/o) {
-	return getCmdOutput("mtn log -r $revision --last 1");
-    } elsif ($vcver =~ /^monotone-0.4\d\b/o) {
-	return getCmdOutput("mtn log --from $revision --last 1 --no-graph");
+    if ($vcver =~ /^monotone-(\d+)\.(\d+)\b/o) {
+	my ($major, $minor) = ($1,$2);
+	if ($major == 0 && $minor <= 0.28) { # may be later than this
+	    return getCmdOutput("mtn log -r $revision --last 1");
+	} elsif ($major == 0 && $minor < 45) { # date formatting added in 0.45
+	    return getCmdOutput("mtn log --from $revision --last 1 --no-graph");
+	} else {
+	    return getCmdOutput("mtn log --no-format-dates --from $revision --last 1 --no-graph");
+	}
     } else {
 	die "Don't know how to get revision log on $vcver";
     }
