PointerUtil.hpp: more pointer utility bits; extend safeRef; add voidCast.
pointerutil.cpp: add tests both of new things and old missing ones.

deptool.in: make sure the add is recursive when we are adding missing things.

--- a/src/deptool.in
+++ b/src/deptool.in
@@ -1945,7 +1945,7 @@ sub depCommitUnknown {
             return;
         } elsif ($_ eq 'add') {
             print "Adding files...\n";
-            runCommand("mtn","add","--unknown");
+            runCommand("mtn","add", "--recursive", "--unknown");
             return;
         } else {
             print "Expected 'ignore' or 'add', not '$_'; try again\n";
