* Sundry minor fixes to reduce the chance of mistakes.
HashMap.hpp: add dGet function that will not change the hashmap, but will
  return the default "value" type if the entry is missing.

PThread.cpp: take out a lock around getNCpus(); if multiple threads calls it,
  it can incorrectly decide that there are more cpus than there actually are.

SimpleMutex.hpp: add a simple scoped lock to make SimpleMutex a little less
  error-prone.

simple_mutex.cpp: and a test case for simple scoped locks.

hashmap.cpp: add test for dGet.

deptool.in: if we have /etc/SuSE-version file then we only know were are
  suse-unknown-* not opensuse-unknown-*

--- a/src/deptool.in
+++ b/src/deptool.in
@@ -3410,7 +3410,7 @@ sub operatingSystem {
 		$Cache::operating_system = "opensuse-$1";
 	    } else {
                 s/\W/_/go; s/\s/_/go;
-		$Cache::operating_system = "opensuse-unknown-$_";
+		$Cache::operating_system = "suse-unknown-$_";
 	    }
         } else {
             $Cache::operating_system = "unknown";
