deptool.in: update to parse suse enterprise inux /etc/SuSE-version

--- a/src/deptool.in
+++ b/src/deptool.in
@@ -3408,6 +3408,8 @@ sub operatingSystem {
 	    chomp;
 	    if (/^openSUSE (\d+)\.\d+ /o) {
 		$Cache::operating_system = "opensuse-$1";
+            } elsif (/^SUSE Linux Enterprise Server (\d+)\b/o) {
+                $Cache::operating_system = "suse-$1";
 	    } else {
                 s/\W/_/go; s/\s/_/go;
 		$Cache::operating_system = "suse-unknown-$_";
