--- a/src/deptool.in
+++ b/src/deptool.in
@@ -2387,7 +2387,8 @@ sub codeReview {
     die "No revisions specified." if @revisions == 0;
 
     eval 'use File::Copy::Recursive "rcopy";';
-    die "aptitude install libfile-copy-recursive-perl?\n$@" if $@;
+    die "aptitude install libfile-copy-recursive-perl
+yum -y install perl-File-Copy-Recursive?\n$@" if $@;
     my %parents;
     my %dates;
     my $branch;
