--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -189,8 +189,11 @@ IF(PERL_ENABLED)
     LINTEL_INSTALL_CONFIG_PROGRAM(batch-parallel)
     LINTEL_INSTALL_CONFIG_PROGRAM(deptool)
     LINTEL_INSTALL_CONFIG_PROGRAM(lintel-flock)
-    LINTEL_INSTALL_CONFIG_PROGRAM(lintel-disktool)
 ENDIF(PERL_ENABLED) 
+
+IF(PERL_ENABLED AND SFDISK_ENABLED AND SGINFO_ENABLED)
+    LINTEL_INSTALL_CONFIG_PROGRAM(lintel-disktool)
+ENDIF(PERL_ENABLED AND SFDISK_ENABLED AND SGINFO_ENABLED)
 
 IF(MERCURY_PLOT_ENABLED)
     LINTEL_INSTALL_CONFIG_PROGRAM(mercury-plot)
